--- a/Collar.html
+++ b/Collar.html
@@ -26,55 +26,55 @@
 
 <!-- MAIN BODY  -->
 
-
+<br><br><br>
     <div class="container">      <!-- Using In-Line block to keep the columns, used inline block again for the size selections  -->
-
         <div class="grid-item productPic">
         <img src="collar_3.jpg" alt="Muddy PAws Teal Dog Collar" style="width:550px;height:660px;border:2px solid black">
     </div>
 
-
-    <div class="grid-item-large dog">
+    <div class="grid-item-large floating">
         <h3>DOG HARNESS</h3>
         <div class="price-sales">$24.99</div>
-        <div class="price-description">Save up to 15% with in-store pick-up<br>LEARN MORE</div>
-        <div class="price-description">Free shipping on orders over $49<br>LEARN MORE</div>
+        <div class="price-description">Save up to 15% with in-store pick-up</div>
+        <div class="price-more">LEARN MORE</div>
+        <div class="price-description">Free shipping on orders over $49</div>
+        <div class="price-more">LEARN MORE</div>
         <a href = "Dog.html" ><p>Search our range of Dog items</p></a>
 
         <h4>SIZE</h4>
         <div class="container">
-            <div class="grid-item-price cat">
+            <div class="grid-item-price tags">
                 <h6>tiny<input type="radio" name="size" id="tiny" value="tiny"></h6>
             </div>
-            <div class="grid-item-price cat">
+            <div class="grid-item-price tags">
                 <h6>small<input type="radio" name="size" id="small" value="small"></h6>
             </div>
-            <div class="grid-item-price cat">
+            <div class="grid-item-price tags">
                 <h6>medium<input type="radio" name="size" id="medium" value="medium"></h6>
             </div>
-            <div class="grid-item-price cat">
+            <div class="grid-item-price tags">
                 <h6>large<input type="radio" name="size" id="large" value="large"></h6>
             </div>
         </div>
 
         <h4>PRICE</h4>
         <div class="container">
-            <div class="grid-item-price cat">
+            <div class="grid-item-price tags">
                 <h6>Strawberry<input type="radio" name="price" id="large" value="large"></h6>
             </div>
-            <div class="grid-item-price cat">
+            <div class="grid-item-price tags">
                 <h6>Blackberry<input type="radio" name="price" id="large" value="large"></h6>
             </div>
-            <div class="grid-item-price cat">
+            <div class="grid-item-price tags">
                 <h6>Crazyberry<input type="radio" name="price" id="large" value="large"></h6>
             </div>
-            <div class="grid-item-price cat">
+            <div class="grid-item-price tags">
                 <h6>Camouflage<input type="radio" name="price" id="large" value="large"></h6>
             </div>
-             <div class="grid-item-price cat">
+             <div class="grid-item-price tags">
                 <h6>Night Moon<input type="radio" name="price" id="large" value="large"></h6>
             </div>
-            <div class="grid-item-price cat">
+            <div class="grid-item-price tags">
                 <h6>Fire Orange<input type="radio" name="price" id="large" value="large"></h6>
             </div>
         </div>
