--- a/Dog.html
+++ b/Dog.html
@@ -25,30 +25,48 @@
 
 
     <h3>DOG ACCESSORIES</h3>
-    <p>Browse our selection of premium Dog products fror your Canine companion</p>
+    <h4>Browse our selection of premium Dog products fror your Canine companion</h4>
 
-    <div class="container2">
-        <a href="DogHarness.html" target="_self">
-            <div class="grid-item harness">
-                <h3>DOG HARNESS</h3>
-                <p>MUDDY PAWS branded harness</p>
-            </div>
+    <div class="container">
+        <a href="DogAccessories.html" target="_self">
+            <div class="grid-box tags"><h6>Collars<br>Harnesses<br>& Leads</h6></div>
         </a>
-        <a href="HarnessAttach.html" target="_self">
-            <div class="grid-item storage">
-                <h3>HARNESS STORAGE ATTACHMENT</h3>
-                <p>Harness attachments for out MUDDY PAWS harness</p>
-            </div>
+        <a href="Clothing.html" target="_self">
+            <div class="grid-box tags"><h6>Clothing</h6></div>
         </a>
-        <a href="Collar.html" target="_self">
-            <div class="grid-item collar">
-                <h3>DOG COLLAR</h3>
-                <p>Dog Collar with GPS tracking enabled</p>
+        <a href="Toys.html" target="_self">
+            <div class="grid-box tags"><h6>Toys</h6></div>
+        </a>
+        <a href="Grooming.html" target="_self">
+            <div class="grid-box tags"><h6>Grooming</h6></div>
+        </a>
+        <a href="Food.html" target="_self">
+            <div class="grid-box tags"><h6>Food</h6></div>
+        </a>
+        <a href="Outdoor.html" target="_self">
+            <div class="grid-box tags"><h6>Outdoor Pursuits</h6></div>
+        </a>
+        <a href="Behaviour.html" target="_self">
+            <div class="grid-box tags"><h6>Training<br>& Behaviour</h6></div>
+        </a>
+        <a href="Dental.html" target="_self">
+            <div class="grid-box tags"><h6>Dental Care</h6></div>
         </a>
     </div>
 
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+<footer>
+    <div style="height: 15px; width: 100%; background-color: gold; color: white;">
+        <br>
+    <p>Design by Mark Byrne for PUI Assignment 3<br>Contact information: <a href="mailto:mabyrne@andrew.cmu.edu">mabyrne</a>.</p>
+</footer>
+
 </body>
 
-
-
+</html>
 
