--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
     <header align="center">
+
         <nav>
             <a href = "index.html" >
                 <h1><img src="MUDDY_HEADER-LOGO.jpg" alt="Muddy Paws Homepage" style="width:400px;height:123px;"></h1>
@@ -24,37 +25,40 @@
             <a href = "Cat.html" > CAT </a>
         </nav>
     </header>
-    <div style="height: 15px; width: 100%; background-color: gold; color: white;">
-    </div>
-    <img src="Home page_HERO.jpg" alt="Muddy Paws Dog Collar Home page" width="2560" height="928" align="center";>
-    <div style="height: 15px; width: 100%; background-color: gold; color: white;">
-    </div>
+        <div style="height: 15px; width: 100%; background-color: gold; color: white;">
+        </div>
+        <img src="Home page_HERO.jpg" alt="Muddy Paws Dog Collar Home page" width="2560" height="928" align="center";>
+        <div style="height: 15px; width: 100%; background-color: gold; color: white;">
+        </div>
 
     <center><h2> Muddy paws offer the best selection of premium Pet supplies for a human’s best friend. At Muddy Paws our goal is to offer not only the best pet products on the market, but also to be a resource for our customers on the wide variety of healthy, fun and innovative products available to meet their pet’s individual needs.</h2></center>
 
     <div class="container">
     <a href="Dog.html" target="_self">
         <div class="grid-item dog">
-            <h3>DOG ACCESSORIES</h3>
-            <p>Search our range of Dog items</p>
+            <h5>DOG ACCESSORIES</h5>
+            <img src="DOG_White.jpg" alt="Muddy Paws Dog Collar Home page" width="550" height="350" align="center"; >
         </div>
     </a>
     <a href="Cat.html" target="_self">
         <div class="grid-item cat">
-            <h3>CAT ACCESSORIES</h3>
-            <p>Search our range of Dog items</p>
+            <h5>CAT ACCESSORIES</h5>
+            <img src="CAT_White.jpg" alt="Muddy Paws Dog Collar Home page" width="550" height="350" align="center"; >
         </div>
     </a>
     </div>
 
-
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
 <footer>
-  <p>Design by Mark Byrne for PUI Assignment 3</p>
-  <p>Contact information: <a href="mailto:someone@example.com">someone@example.com</a>.</p>
+    <div style="height: 15px; width: 100%; background-color: gold; color: white;">
+        <br>
+    <p>Design by Mark Byrne for PUI Assignment 3<br>Contact information: <a href="mailto:mabyrne@andrew.cmu.edu">mabyrne</a>.</p>
 </footer>
-
-
 
 </body>
 
