--- a/Cart.html
+++ b/Cart.html
@@ -25,44 +25,27 @@
                     <a href = "Dog.html" > DOG </a>
                     <a href = "Cat.html" > CAT </a>
                 </nav>
+                <a href="cart.html"><align = right>Cart</a>
             </section>
         </header>
             <div style="height: 15px; width: 100%; background-color: gold; color: white;">
             </div>
+    <body>
+        <!-- SHOPPING CART !-->
+        <section class="shopping-cart">
+            <h1 class="title">Shopping Cart</h1>
+            <table id="cart-table">
+                <tr class="item">
+                    <th>PRODUCT</th>
+                    <th>IMAGE</th>
+                    <th>PRICE</th>
+                    <th>SIZE</th>
+                    <th>COLOR</th>
+                </tr>
 
-
-        <h3>DOG ACCESSORIES</h3>
-        <p>Browse our selection of premium Dog products fror your Canine companion</p>
-
-        <div class="container2">
-            <a href="DogHarness.html" target="_self">
-                <div class="grid-item-small accessories">
-                    <h6>Dog<br>Harness</h6>
-                    <p>MUDDY PAWS branded harness</p>
-                </div>
-            </a>
-            <a href="HarnessAttach.html" target="_self">
-                <div class="grid-item-small accessories">
-                    <h6>Harness<br>Storage<br>Attachment</h6>
-                    <p>Water storage harness attachement</p>
-                </div>
-            </a>
-            <a href="Collar.html" target="_self">
-                <div class="grid-item-small accessories">
-                    <h6>GPS<br>Dog<br>Collar</h6>
-                    <p>GPS Designer dog collar </p>
-                </div>
-            </a>
-        </div>
-
-        <div class="foo"></div>
-
-        <footer>
-            <div style="height: 15px; width: 100%; background-color: gold; color: white;">
-                <br>
-            <p>Design by Mark Byrne for PUI Assignment 3<br>Contact information: <a href="mailto:mabyrne@andrew.cmu.edu">mabyrne</a>.</p>
-        </footer>
-
+            </table>
+            <a class="grid-item-button check"><h6>Checkout</h6></a>
+            </div>
+        </section>
     </body>
-
 </html>
