--- a/CollarHarness.html
+++ b/CollarHarness.html
@@ -29,23 +29,22 @@
 
     <div class="container2">
         <a href="DogHarness.html" target="_self">
-            <div class="grid-item-small accessories">
-                <h6>Dog<br>Harness</h6>
+            <div class="grid-item-small harness">
+                <h3>DOG HARNESS</h3>
                 <p>MUDDY PAWS branded harness</p>
             </div>
         </a>
         <a href="HarnessAttach.html" target="_self">
-            <div class="grid-item-small accessories">
-                <h6>Harness<br>Storage<br>Attachment</h6>
-                <p>Water storage harness attachement</p>
+            <div class="grid-item-small storage">
+                <h3>HARNESS STORAGE ATTACHMENT</h3>
+                <p>Harness attachments for out MUDDY PAWS harness</p>
             </div>
         </a>
         <a href="Collar.html" target="_self">
-            <div class="grid-item-small accessories">
-                <h6>GPS<br>Dog<br>Collar</h6>
-                <p>GPS Designer dog collar </p>
+            <div class="grid-item-small collar">
+                <h3>DOG COLLAR</h3>
+                <p>Dog Collar with GPS tracking enabled</p>
         </a>
-
     </div>
 
     <br>
