--- a/Cat.html
+++ b/Cat.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,7 +13,7 @@
     <header align="center">
         <nav>
             <a href = "index.html" >
-                <h1><img src="img/MUDDY_HEADER-LOGO.jpg" alt="Muddy Paws Homepage" style="width:400px;height:123px;"></h1>
+                <h1><img src="MUDDY_HEADER-LOGO.jpg" alt="Muddy Paws Homepage" style="width:400px;height:123px;"></h1>
             </a>
             <a href = "index.html" > HOME </a>
             <a href = "Dog.html" > DOG </a>
